complete two section

--- a/index.html
+++ b/index.html
@@ -6,17 +6,44 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Food Network</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 
 </head>
 
 <body>
-    <div>
-        <a href="">Home</a>
-        <a href="">Item</a>
-        <a href="">Article</a>
-        <a href="">Contact Us</a>
+    <div class="top-nav">
+        <a class="nav-link" target="_blank" href="https://www.greenchef.com/">Home</a>
+        <a class="nav-link" target="_blank" href="https://www.greenchef.com/">Item</a>
+        <a class="nav-link" target="_blank" href="https://www.greenchef.com/">Article</a>
+        <a class="nav-link" target="_blank" href="https://www.greenchef.com/">Contact Us</a>
     </div>
+    <section class="flexible-container">
+        <div class="half-width">
+            <h1><span>Skip</span> The Diet,</h1>
+            <h1>Just Eat Healthy</h1>
+            <h1>With Food Network</h1>
+            <p>Imagine you don't need a diet because we provide
+                healthy and delicious food for you!</p>
+            <a class="link-button" target="_blank" href="https://www.greenchef.com/">Order Food</a>
+        </div>
+        <div class="half-width">
+            <img src="images/female/Group 8425.png" alt="">
+        </div>
+    </section>
+    <section class="flexible-box mid-background-img">
+        <div class="perfect-width" id="img-position">
+            <img src="images/female/Person Image.png" alt="">
+        </div>
+        <div class="perfect-width" id="text-position">
+            <h1>About Me</h1>
+            <p>My name is Joshua Weissman. I was born and raised in California and I currently live in Texas. As this
+                may come as a shock to some of you I am currently 26 years old. </p>
+            <a target="_blank" class="link-button" href="https://www.greenchef.com">Contact Me</a>
+        </div>
+    </section>
 </body>
 
 </html>
