completed receipi section

--- a/index.html
+++ b/index.html
@@ -44,6 +44,33 @@
             <a target="_blank" class="link-button" href="https://www.greenchef.com">Contact Me</a>
         </div>
     </section>
+    <section>
+        <div class="recipe-area">
+            <h2>My Recipies</h2>
+            <p>Now offering a variety of easy-to-follow meal plans for every lifestyle, like keto, plant-powered, and
+                more.</p>
+        </div>
+        <div class="flexible-item">
+            <div class="recipie-item">
+                <img src="images/food/Project Cover1.jpg" alt="">
+                <h3>SESAME-GINGER TILAPIA</h3>
+                <p>Shichimi togarashi is a Japanese spice blend featuring red chili pepper, orange peel, and ginger.
+                </p>
+            </div>
+            <div class="recipie-item">
+                <img src="images/food/Project Cover.png" alt="">
+                <h3>SAUCY BBQ CHICKEN</h3>
+                <p>Tonight’s dish turns classic weekend barbecue staples into a quick weeknight dinner. Cauliflower is
+                </p>
+            </div>
+            <div class="recipie-item">
+                <img src="images/food/Project Cover.jpg" alt="">
+                <h3>BBQ PORK PATTIES</h3>
+                <p>Quick, simple, and flavorful—you’re looking at your new weeknight dinner hero. With just seven
+                </p>
+            </div>
+        </div>
+    </section>
 </body>
 
 </html>
