complete footer and update some css

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     </div>
     <section class="flexible-container">
         <div class="half-width">
-            <h1><span>Skip</span> The Diet,</h1>
+            <h1><span class="color-txt">Skip</span> The Diet,</h1>
             <h1>Just Eat Healthy</h1>
             <h1>With Food Network</h1>
             <p>Imagine you don't need a diet because we provide
@@ -48,7 +48,7 @@
         <div class="recipe-area">
             <h2>My Recipies</h2>
             <p>Now offering a variety of easy-to-follow meal plans for every lifestyle, like keto, plant-powered, and
-                more.</p>
+                more. Quick, simple, and flavorful—you’re looking at your new weeknight dinner hero</p>
         </div>
         <div class="flexible-item">
             <div class="recipie-item">
@@ -71,6 +71,17 @@
             </div>
         </div>
     </section>
+    <div class="contact-area">
+        <h1>Let's Grow Your Digital Business</h1>
+        <p>Get design inspiration, development tips, and practical takeways delivered straight to your inbox</p>
+        <input class="update-area" type="email" placeholder="Enter your email">
+        <input class="update-area" type="button" value="Get Updates">
+        <p>No charge. Unsubscribe anytime</p>
+    </div>
+    <div class="footer-area">
+        <h1><span class="color-txt">FOOD</span> <span id="color-second-txt">NETWORK</span></h1>
+        <p>Eat healthy to live healthy, Live healthy to live happy.</p>
+    </div>
 </body>
 
 </html>
